@@ -4,6 +4,8 @@ import org.pcap4j.core.PcapHandle;
 import org.pcap4j.core.PcapNetworkInterface;
 import org.pcap4j.core.Pcaps;
 import org.pcap4j.packet.Packet;
+import org.pcap4j.packet.IpV4Packet;
+import org.pcap4j.packet.TcpPacket;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
@@ -13,6 +15,7 @@ import jakarta.annotation.PreDestroy;
 
 import java.net.InetAddress;
 import java.net.NetworkInterface;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Enumeration;
@@ -28,60 +31,41 @@ import java.util.regex.Pattern;
 public class Pcap4jService {
 
     @Value("${web.ip}")
-    private String webIp; // 외부 공인 IP (다른 곳에서 사용 중이므로 그대로 유지)
+    private String webIp; 
     
     @Value("${web.port}")
     private String webPort;
 
-    // 이 서버의 실제 로컬 IP 목록 (자동 감지) - NAT 환경 대응
     private Set<String> localIps = new HashSet<>();
-
-    // IP 주소 추출용 정규식 (OS 무관하게 동작)
-    private static final Pattern IP_PATTERN =
-            Pattern.compile("(\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3})");
-
-    // STOMP 브로커로 메시지를 보낼 수 있게 해주는 스프링 내장 템플릿
+    private static final Pattern IP_PATTERN = Pattern.compile("(\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3})");
     private final SimpMessagingTemplate messagingTemplate;
     private Thread captureThread;
     private boolean isCapturing = false;
 
-    // 생성자 주입
     public Pcap4jService(SimpMessagingTemplate messagingTemplate) {
         this.messagingTemplate = messagingTemplate;
     }
 
-    // @PostConstruct: 의존성 주입이 완료된 후, 스프링 부트가 켜지면서 자동으로 이 메서드를 실행함
     @PostConstruct
     public void init() {
-        // 로컬 IP 자동 감지 (NIC에서 직접 읽어옴)
         detectLocalIps();
         System.out.println("[Pcap4j] 외부 공인 IP (web.ip): " + webIp);
         System.out.println("[Pcap4j] 감지된 로컬 IP 목록: " + localIps);
         startCapture();
     }
 
-    /**
-     * 이 서버에 할당된 모든 로컬 IP를 자동으로 감지
-     * - 루프백(127.x.x.x)은 제외
-     * - NAT 환경에서도 NIC에 붙은 실제 사설 IP를 정확히 가져옴
-     * - web.ip(공인 IP)는 건드리지 않음
-     */
     private void detectLocalIps() {
-        localIps.add(webIp); // 공인 IP도 포함 (Windows 직접 연결 환경 대응)
+        localIps.add(webIp); 
         try {
             Enumeration<NetworkInterface> nics = NetworkInterface.getNetworkInterfaces();
             if (nics == null) return;
 
             for (NetworkInterface nic : Collections.list(nics)) {
-                // 비활성 NIC 스킵
                 if (!nic.isUp()) continue;
-
                 for (InetAddress addr : Collections.list(nic.getInetAddresses())) {
                     String ip = addr.getHostAddress();
-
-                    // IPv6, 루프백 제외
                     if (addr.isLoopbackAddress()) continue;
-                    if (ip.contains(":")) continue; // IPv6
+                    if (ip.contains(":")) continue; 
 
                     localIps.add(ip);
                     System.out.println("[Pcap4j] 로컬 IP 발견: " + ip + " (" + nic.getDisplayName() + ")");
@@ -99,75 +83,58 @@ public class Pcap4jService {
         captureThread = new Thread(() -> {
             try {
                 List<PcapNetworkInterface> allDevs = Pcaps.findAllDevs();
-                System.out.println("====== [내 PC 진짜 랜카드 목록 확인] ======");
-                for (int i = 0; i < allDevs.size(); i++) {
-                    System.out.println("[" + i + "] " + allDevs.get(i).getDescription());
-                }
-                System.out.println("=========================================");
-                
-                
-                
-
                 if (allDevs.isEmpty()) {
                     System.out.println("[Pcap4j] 랜카드를 찾을 수 없습니다.");
                     return;
                 }
 
-                // 랜카드별로 각각 스레드 생성
                 List<Thread> ifThreads = new ArrayList<>();
 
                 for (PcapNetworkInterface nif : allDevs) {
                     Thread ifThread = new Thread(() -> {
                         try {
+                            // 버퍼 크기를 65536으로 넉넉하게 유지
                             PcapHandle handle = nif.openLive(65536, PcapNetworkInterface.PromiscuousMode.PROMISCUOUS, 10);
                             System.out.println("[Pcap4j] 감시 시작 -> " + nif.getDescription());
                             
-                            
-                            String nifName = nif.getName(); //랜카드 장치명
+                            String nifName = nif.getName(); 
 
                             while (isCapturing && !Thread.currentThread().isInterrupted()) {
-                            	if("any".equals(nifName)) continue ; //리눅스 가상 랜카드 -중복데이터
+                                if("any".equals(nifName)) continue; 
                                 Packet packet = handle.getNextPacket();
 
                                 if (packet != null) {
-                                    String packetContent = packet.toString();
+                                    // 중요: 패킷 구조를 쪼개서 매핑 객체 가져오기
+                                    Map<String, String> parsed = parsePacketStructure(packet);
+                                    if (parsed == null) continue; // IP 패킷이 아니면 패스
 
-                                    // IPv4 Header 없으면 스킵
-                                    if (!packetContent.contains("[IPv4 Header")) continue;
-
-                                    Map<String, String> parsed = parsePacket(packetContent);
-
-                                    // 기타(local간 통신 / 브로드캐스트 등)는 전송 안 함
-                                    
                                     String direction = parsed.get("direction");
                                     if ("[기타]".equals(direction)) continue;
 
                                     String proto = parsed.getOrDefault("Protocol", "");
-                                    if (proto.equals("IGMP")) continue;
+                                    if ("IGMP".equals(proto)) continue;
                                     
-                                    //소캣통신 제외
-                                    String HexStream = parsed.get("Hex stream");
                                     String destinationPort = parsed.get("Destination port");
                                     String sourcePort = parsed.get("Source port");
+                                    String textData = parsed.get("Text data"); // 발라낸 순수 데이터
+
+                                    // 필터링 로직 규칙 유지
                                     if ("[보내는 패킷]".equals(direction)) {
-                                    	if (sourcePort != null && sourcePort.contains("8199")) {
-                                    		if (HexStream == null || HexStream.startsWith("c1 ")) {
+                                        if (sourcePort != null && sourcePort.contains("8199")) {
+                                            if (textData == null || textData.isBlank()) {
                                                 continue;
                                             }
-                                    	}
+                                        }
                                     } else if ("[받은 패킷]".equals(direction)) {
-                                        // 2. 8199 포트로 들어오는 패킷 중 '소켓 쓰레기 데이터'만 골라내기
                                         if (destinationPort != null && destinationPort.contains("8199")) {
-                                        	//if (HexStream == null || HexStream.trim().isEmpty() || HexStream.startsWith("00 ")) {
-                                            if (HexStream == null || HexStream.startsWith("00 ")) {
+                                            if (textData == null || textData.isBlank()) {
                                                 continue;
                                             }
                                         }
                                     }
-                                    
-                                 
+                                  
                                     StringBuilder sb = new StringBuilder();
-                                    sb.append("nifName(랜카드) : "+nifName+"\n");
+                                    sb.append("nifName(랜카드) : ").append(nifName).append("\n");
                                     parsed.forEach((k, v) -> sb.append(k).append(": ").append(v).append("\n"));
 
                                     messagingTemplate.convertAndSend("/packet", sb.toString());
@@ -182,12 +149,11 @@ public class Pcap4jService {
                         }
                     });
 
-                    ifThread.setDaemon(true); // 메인 종료 시 같이 종료
+                    ifThread.setDaemon(true); 
                     ifThreads.add(ifThread);
                     ifThread.start();
                 }
 
-                // 모든 랜카드 스레드가 끝날 때까지 대기
                 for (Thread t : ifThreads) {
                     t.join();
                 }
@@ -209,96 +175,59 @@ public class Pcap4jService {
         System.out.println("[Pcap4j] 패킷 감시단이 종료되었습니다.");
     }
 
-    // 패킷 파싱 유틸 메서드
-    private Map<String, String> parsePacket(String packetContent) {
+    /**
+     * 흔들리는 문자열 파싱 대신, 패킷 객체 모델을 직접 분석하는 안전한 메서드
+     */
+    private Map<String, String> parsePacketStructure(Packet packet) {
+        // IPv4 레이어 추출
+        IpV4Packet ipV4Packet = packet.get(IpV4Packet.class);
+        if (ipV4Packet == null) return null;
+
         Map<String, String> info = new LinkedHashMap<>();
-        String[] lines = packetContent.split("\\r?\\n");
+        
+        // IP 및 프로토콜 추출
+        String srcIp = ipV4Packet.getHeader().getSrcAddr().getHostAddress();
+        String dstIp = ipV4Packet.getHeader().getDstAddr().getHostAddress();
+        info.put("Protocol", ipV4Packet.getHeader().getProtocol().name());
+        info.put("Source address", srcIp);
+        info.put("Destination address", dstIp);
 
-        boolean inIpv4Header = false;
-
-        for (String line : lines) {
-            String trimmed = line.trim();
-
-            // IPv4 Header 섹션 진입/탈출 감지
-            if (trimmed.startsWith("[IPv4 Header")) {
-                inIpv4Header = true;
-            } else if (trimmed.startsWith("[") && !trimmed.startsWith("[IPv4")) {
-                inIpv4Header = false;
-            }
-
-            if (inIpv4Header) {
-                // Protocol 파싱
-                if (trimmed.startsWith("Protocol:")) {
-                    String proto = trimmed.replaceAll(".*\\((.+?)\\).*", "$1");
-                    if (proto.equals(trimmed)) {
-                        proto = trimmed.replace("Protocol:", "").trim();
-                    }
-                    info.put("Protocol", proto);
-                }
-
-                // Source address 파싱 - 정규식으로 IP 직접 추출 (OS 무관)
-                if (trimmed.startsWith("Source address:")) {
-                    String ip = extractIp(trimmed);
-                    if (ip != null) info.putIfAbsent("Source address", ip);
-                }
-
-                // Destination address 파싱 - 정규식으로 IP 직접 추출 (OS 무관)
-                if (trimmed.startsWith("Destination address:")) {
-                    String ip = extractIp(trimmed);
-                    if (ip != null) info.putIfAbsent("Destination address", ip);
-                }
-            }
+        // TCP 레이어 추출 (포트 및 페이로드 데이터용)
+        TcpPacket tcpPacket = packet.get(TcpPacket.class);
+        if (tcpPacket != null) {
+            info.put("Source port", String.valueOf(tcpPacket.getHeader().getSrcPort().valueAsInt()));
+            info.put("Destination port", String.valueOf(tcpPacket.getHeader().getDstPort().valueAsInt()));
             
-            // Source port 파싱 (헤더 섹션 무관)
-            if (trimmed.startsWith("Source port:")) {
-                String port = trimmed.replaceAll("Source port: (\\d+).*", "$1");
-                info.put("Source port", port);
+            // ★ 핵심: 헤더 제외한 실제 알맹이 데이터(Payload) 바이트 배열 가져오기
+            Packet payload = tcpPacket.getPayload();
+            if (payload != null) {
+                byte[] rawPayload = payload.getRawData();
+                // 깨진 바이너리가 섞여있을 수 있으므로 문자열로 안전하게 디코딩
+                String convertedText = new String(rawPayload, StandardCharsets.UTF_8).trim();
+                info.put("Text data", convertedText);
+            } else {
+                info.put("Text data", "");
             }
-
-            // Destination port 파싱 (헤더 섹션 무관)
-            if (trimmed.startsWith("Destination port:")) {
-                String port = trimmed.replaceAll("Destination port: (\\d+).*", "$1");
-                String portName = trimmed.contains("(")
-                        ? trimmed.replaceAll(".*\\((.+?)\\).*", "$1") : "unknown";
-                info.put("Destination port", port);
-            }
-
-            // Hex stream 파싱
-            if (trimmed.startsWith("Hex stream:")) {
-                info.put("Hex stream", trimmed.replace("Hex stream:", "").trim());
-            }
-        }
-
-        // 방향 판단 - localIps(자동 감지된 모든 IP) 기준으로 비교
-        String src = info.getOrDefault("Source address", "");
-        String dst = info.getOrDefault("Destination address", "");
-
-        String direction;
-        if (localIps.contains(src)) {
-            direction = "[보내는 패킷]";
-        } else if (localIps.contains(dst)) {
-            direction = "[받은 패킷]";
         } else {
-            direction = "[기타]";
+            // TCP가 아닐 경우 기존처럼 데이터가 있으면 변환 시도
+            byte[] rawData = packet.getRawData();
+            if (rawData != null) {
+                info.put("Text data", new String(rawData, StandardCharsets.UTF_8).trim());
+            }
         }
 
-        // direction을 맨 앞에 오도록 새 Map에 담기
+        // 방향성 판단
+        String direction = "[기타]";
+        if (localIps.contains(srcIp)) {
+            direction = "[보내는 패킷]";
+        } else if (localIps.contains(dstIp)) {
+            direction = "[받은 패킷]";
+        }
+
         Map<String, String> result = new LinkedHashMap<>();
         result.put("direction", direction);
         result.putAll(info);
 
         return result;
-    }
-
-    /**
-     * 문자열에서 IPv4 주소를 정규식으로 추출
-     * Windows(npcap), Linux(libpcap) 양쪽 포맷 대응
-     * 예) "Source address: /192.168.0.1"  → "192.168.0.1"
-     *     "Source address: 192.168.0.1"   → "192.168.0.1"
-     *     "Source address: /hostname.local" → null (IP 없으면 null)
-     */
-    private String extractIp(String line) {
-        Matcher m = IP_PATTERN.matcher(line);
-        return m.find() ? m.group(1) : null;
     }
 }
